--- a/Basic.ipynb
+++ b/Basic.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Basic.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMqXUS6igKOZY/DsdvsX/mL",
+      "authorship_tag": "ABX9TyPumxuQ69LP076RNPBHevst",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,6 +26,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/markquark125/Summer-MicroCredentials/blob/main/Basic.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Basic Notebook"
+      ],
+      "metadata": {
+        "id": "uxUB2h6odDCA"
+      }
     },
     {
       "cell_type": "code",
@@ -94,15 +103,26 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        ""
+        "# Genghis Rules of Programming"
       ],
       "metadata": {
-        "id": "ecMBLCGlbN53"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "F3Bbjl9eeMJ1"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 1. Read the documentation.\n",
+        "## 2. PRACTICE.\n",
+        "## 3. StackOverflow.\n",
+        "## 4. Genghis is NEVER WRONG!\n",
+        "## 5. There is no spoon! - WHAT BOX - "
+      ],
+      "metadata": {
+        "id": "dxbq-j2Ted7f"
+      }
     }
   ]
 }
