--- a/Basics_part_2.ipynb
+++ b/Basics_part_2.ipynb
@@ -6,7 +6,7 @@
       "name": "Basics part 2.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO4Pru5o8Gb8OIUCrH1ufPE",
+      "authorship_tag": "ABX9TyMKC1JZjtpEpPJw/5WCRCmq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2008,25 +2008,529 @@
       }
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        ""
+        "### 1) Concatenation of the string's"
       ],
       "metadata": {
         "id": "7MAXMr94EqR5"
-      },
-      "execution_count": null,
-      "outputs": []
+      }
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "greeting = \"Hello\""
       ],
       "metadata": {
         "id": "wrSZJMTtEqbn"
       },
-      "execution_count": null,
+      "execution_count": 130,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "name = \"Mark\""
+      ],
+      "metadata": {
+        "id": "7wBo3LfrEqiS"
+      },
+      "execution_count": 131,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print (greeting + name)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7WI6Rcp0FAVr",
+        "outputId": "dbcdde4f-a99c-46c7-bccd-b3d4f1f12c1c"
+      },
+      "execution_count": 132,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "HelloMark\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print (greeting + \" \" + name)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uyTJqFAiFCsa",
+        "outputId": "4efd19d8-6e20-4635-880b-aaf9b8e87aa1"
+      },
+      "execution_count": 133,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello Mark\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 2) Input function"
+      ],
+      "metadata": {
+        "id": "iM-nc2j7FFa6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "name = input(\"What is your name: \")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "B2oqoS7GFVBZ",
+        "outputId": "d3beed34-0acd-4721-a6e8-b9b532a3ce42"
+      },
+      "execution_count": 137,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "What is your name: John\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(greeting + \" \" + name)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uHz3urfGFGwJ",
+        "outputId": "228c3be9-b22a-453d-8abc-fe1e325c605c"
+      },
+      "execution_count": 138,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello John\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 3) Indexing strings"
+      ],
+      "metadata": {
+        "id": "8KK5qFrqFHNU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "color = \"Orange\""
+      ],
+      "metadata": {
+        "id": "RNtihOxvFyB3"
+      },
+      "execution_count": 139,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(color)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pRKN_uT1FyLT",
+        "outputId": "4a0938d0-f6eb-416c-d000-bb6641270092"
+      },
+      "execution_count": 140,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "6"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 140
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "color[3]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "zJIS2k-1FyT3",
+        "outputId": "8d204f4c-b7d8-4751-cc0b-6d1a514bb9f9"
+      },
+      "execution_count": 141,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'n'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 141
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "color[-1]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "6LrlaMUdGCE6",
+        "outputId": "845e5949-a337-485e-f04d-4cc80700be1e"
+      },
+      "execution_count": 142,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'e'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 142
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "color[-2]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "0lprVV-kGEMj",
+        "outputId": "01eda6d4-b4d5-4a41-e02c-fa2db3d9ffa1"
+      },
+      "execution_count": 143,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'g'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 143
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "color[2:-1]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "CCcJoSk2GHNe",
+        "outputId": "1b36a58d-6be8-42f6-fb22-f0cbb3eca387"
+      },
+      "execution_count": 144,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'ang'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 144
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 4) String Formatting"
+      ],
+      "metadata": {
+        "id": "ubzapnPRGJgC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "age = 27"
+      ],
+      "metadata": {
+        "id": "znNSGUSsGJpv"
+      },
+      "execution_count": 149,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"My age is \" + str(age) + \" years old\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "97V62N_IGUjI",
+        "outputId": "07975cd7-430d-4ebf-829d-80ecd6b18ea9"
+      },
+      "execution_count": 151,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "My age is 27 years old\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"The colors are {} {} {} \".format(\"Red\", \"Green\", \"Blue\"))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RNxlQN-BGUdk",
+        "outputId": "30b958f0-30ec-4753-da70-dbff4ce4bb91"
+      },
+      "execution_count": 152,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The colors are Red Green Blue \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"The colors are {0} {2} {1} \".format(\"Red\", \"Green\", \"Blue\"))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7TMJlxttHK2k",
+        "outputId": "59c7243f-c3f6-4614-86ef-3eb1dce48971"
+      },
+      "execution_count": 153,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The colors are Red Blue Green \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"The colors are {2} {2} {2} \".format(\"Red\", \"Green\", \"Blue\"))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0CzCNAbJHUZT",
+        "outputId": "c5ee002b-2bb7-4787-9cc4-3cdae614fab0"
+      },
+      "execution_count": 154,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The colors are Blue Blue Blue \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"The colors are {r} {g} {b} \".format(r=\"Red\", g=\"Green\", b=\"Blue\"))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yM_NxC2EHdOv",
+        "outputId": "152519ed-173e-4f13-941d-5461bcf55300"
+      },
+      "execution_count": 155,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The colors are Red Green Blue \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"The colors are {r} {r} {r} \".format(r=\"Red\", g=\"Green\", b=\"Blue\"))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bfscIGhjHkOj",
+        "outputId": "3d650f82-2714-494f-c634-5e099283acde"
+      },
+      "execution_count": 156,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The colors are Red Red Red \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pi = 3.1415"
+      ],
+      "metadata": {
+        "id": "NbGHu-A3Hpjw"
+      },
+      "execution_count": 157,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"The value of pi is {}\".format(pi))\n",
+        "# Remeber that {} is a place holder."
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fxxHrOIeHrhj",
+        "outputId": "d9266e57-1c48-4b40-f38d-159adbc215bf"
+      },
+      "execution_count": 159,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The value of pi is 3.1415\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f\"The value of pi is {pi}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GKITgO8SH6sP",
+        "outputId": "f673653c-dbcb-41fc-c361-e2b680ffad59"
+      },
+      "execution_count": 160,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The value of pi is 3.1415\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Link to review string formatting:\n",
+        "# https://realpython.com/python-string-formatting/\n"
+      ],
+      "metadata": {
+        "id": "_U5T6cf7IS8z"
+      },
+      "execution_count": 161,
       "outputs": []
     },
     {
@@ -2035,7 +2539,7 @@
         ""
       ],
       "metadata": {
-        "id": "7wBo3LfrEqiS"
+        "id": "8IZt4RBhImvD"
       },
       "execution_count": null,
       "outputs": []
