--- a/Basics_part_2.ipynb
+++ b/Basics_part_2.ipynb
@@ -6,7 +6,7 @@
       "name": "Basics part 2.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMKC1JZjtpEpPJw/5WCRCmq",
+      "authorship_tag": "ABX9TyNOka4IaIwXdx1/NY4sypJL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2536,10 +2536,184 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "## Project: 1\n",
+        "\n",
+        "# Convert a Number into Binary, Octal and Hexadecimal"
       ],
       "metadata": {
         "id": "8IZt4RBhImvD"
+      },
+      "execution_count": 162,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "\"\"\"\n",
+        "Decimal number 8\n",
+        "\n",
+        "Binary: 1000\n",
+        "Octal: 10\n",
+        "Hexadecimal: 8\n",
+        "\n",
+        "\"\"\""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "HyUtw3ZdJw0S",
+        "outputId": "4d1e7d24-eff1-4b29-cfdd-7bf106141375"
+      },
+      "execution_count": 167,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'\\nDecimal number 8\\n\\nBinary: 1000\\n\\n\\n'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 167
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "k891DzjbOFIc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        " "
+      ],
+      "metadata": {
+        "id": "OLRKHRm8OEzq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "number = 8"
+      ],
+      "metadata": {
+        "id": "RoMuxzhEJyPP"
+      },
+      "execution_count": 168,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "bin(number)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "prBzwPIPNGO0",
+        "outputId": "61d9da57-62f0-4a51-b8cf-b4ac9361cd9b"
+      },
+      "execution_count": 169,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'0b1000'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 169
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "oct(number)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "qQlHt_WGNHZn",
+        "outputId": "92ef52ce-e363-4327-b4e7-453a571eb128"
+      },
+      "execution_count": 170,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'0o10'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 170
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "hex(number)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "vH2s8WwHNIoH",
+        "outputId": "6632fcdc-1c22-4968-b707-d719d23d9465"
+      },
+      "execution_count": 171,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'0x8'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 171
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "KrN8dSUeNQOD"
       },
       "execution_count": null,
       "outputs": []
