--- a/Homework_1.ipynb
+++ b/Homework_1.ipynb
@@ -62,7 +62,7 @@
       "metadata": {
         "id": "YbhKO6Cs09av"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -77,7 +77,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -119,7 +119,7 @@
       "metadata": {
         "id": "vcYhNNaU09Uz"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -134,7 +134,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -165,41 +165,38 @@
         "    Input: A list n\n",
         "    Output: Will print count of 4s in a list\n",
         "    \"\"\"\n",
-        "    count = 0\n",
-        "    for i in n:\n",
-        "        if n[i-1] == 4:   # Iteration starts at one but index starts at zero!\n",
-        "            count += 1\n",
-        "    return count\n"
+        "    # Using count method: https://www.programiz.com/python-programming/methods/list/count\n",
+        "\n",
+        "    count = n.count(4)\n",
+        "\n",
+        "    print('Number of 4s: ', count)\n"
       ],
       "metadata": {
         "id": "oWZ3vTfW09Oh"
       },
-      "execution_count": 22,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "how_many_fours([1,4,3,5,4,5,6,4,4,10])"
+        "how_many_fours([1,4,3,5,4,5,4,4,4,10])"
       ],
       "metadata": {
         "id": "lIuZvpd5AnBr",
-        "outputId": "73e11cf4-f681-4d24-be0e-516daf8d8444",
+        "outputId": "9b603b68-9895-43b6-e4ab-28620485ddf4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "2"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 24
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Number of 4s:  5\n"
+          ]
         }
       ]
     },
@@ -215,13 +212,46 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "def triangle_area(b,h):\n",
+        "    \"\"\"\n",
+        "    Description: Computes the area of a triangle given a base and height.\n",
+        "    Author: Marcos Ortega\n",
+        "    Input: A base b and height h\n",
+        "    Output: Prints area of a triangle: 1/2 * b * h\n",
+        "    \"\"\"\n",
+        "\n",
+        "    area = (1/2) * b * h\n",
+        "\n",
+        "    print('Area of a triangle with a base', b, 'and a height',h,': ', area)\n"
       ],
       "metadata": {
         "id": "G02dv4rh1MFs"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "triangle_area(2,4)"
+      ],
+      "metadata": {
+        "id": "ubCSrh6Q1vWs",
+        "outputId": "ea66047a-a0f7-416a-8882-9e2a2ea11cd1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Area of a triangle with a base 2 and a height 4 :  4.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -235,13 +265,59 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "def convert_distance():\n",
+        "    \"\"\"\n",
+        "    Description: Computes distance f into inches, yards, and miles\n",
+        "    Author: Marcos Ortega\n",
+        "    Input: An input of distance f (which is in feet)\n",
+        "    Output: Prints out inches, yards, and miles\n",
+        "    \"\"\"\n",
+        "\n",
+        "    feet = int(input('Enter feet: '))\n",
+        "\n",
+        "    inches = feet * 12.0\n",
+        "    yards = feet/3.0\n",
+        "    miles = feet/5280\n",
+        "\n",
+        "    print('Given a distance of', feet, 'feet:')\n",
+        "    print('Inches:', inches)\n",
+        "    print('Yards:', yards)\n",
+        "    print('Miles:', miles)\n",
+        "\n",
+        "    # The imperial system is ridiculous"
       ],
       "metadata": {
         "id": "YtW-ZxqB1L2c"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "convert_distance()"
+      ],
+      "metadata": {
+        "id": "7Nw8DMVo1l0V",
+        "outputId": "96c5bbf1-0a3d-4c28-883b-f1d87f69b086",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter feet: 12\n",
+            "Given a distance of 12 feet:\n",
+            "Inches: 144.0\n",
+            "Yards: 4.0\n",
+            "Miles: 0.0022727272727272726\n"
+          ]
+        }
+      ]
     }
   ]
 }
