--- a/Numpy_Exercises.ipynb
+++ b/Numpy_Exercises.ipynb
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 38,
       "metadata": {
         "collapsed": true,
         "jupyter": {
@@ -63,7 +63,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "jupyter": {
           "outputs_hidden": false
@@ -103,7 +103,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "jupyter": {
           "outputs_hidden": false
@@ -142,7 +142,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "jupyter": {
           "outputs_hidden": false
@@ -182,7 +182,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "jupyter": {
           "outputs_hidden": false
@@ -223,7 +223,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "jupyter": {
           "outputs_hidden": false
@@ -263,7 +263,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "jupyter": {
           "outputs_hidden": false
@@ -314,7 +314,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -341,7 +341,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "jupyter": {
           "outputs_hidden": false
@@ -379,7 +379,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "jupyter": {
           "outputs_hidden": false
@@ -421,7 +421,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "jupyter": {
           "outputs_hidden": false
@@ -479,7 +479,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -538,7 +538,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": 34,
       "metadata": {
         "jupyter": {
           "outputs_hidden": false
@@ -547,7 +547,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PJhLSqNEas0g",
-        "outputId": "e3b39d4f-609f-4972-94dc-f4b116282207"
+        "outputId": "037c9591-a4e2-44ba-d953-b3b5b38d8d94"
       },
       "outputs": [
         {
@@ -566,7 +566,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 56
+          "execution_count": 34
         }
       ],
       "source": [
@@ -596,18 +596,24 @@
     {
       "cell_type": "code",
       "source": [
+        "\"\"\"\n",
+        "First attempt. Found another way to do it, though more complicated.\n",
+        "\n",
         "new_mat = mat[(27>mat) & (mat>11)].reshape(3,5)\n",
         "new_mat[:,0:4]\n",
+        "\"\"\"\n",
+        "\n",
+        "np.array(mat[(27>mat) & (mat>11)]).reshape(3,5)[:,0:4]\n",
         "# Used as reference: https://jakevdp.github.io/PythonDataScienceHandbook/02.07-fancy-indexing.html"
       ],
       "metadata": {
         "id": "oPEjIA5KAK4X",
-        "outputId": "0f796de1-e619-4924-f8b7-efcc5c333058",
+        "outputId": "364eeec2-eea5-495d-fe81-b6b6112cb56b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 73,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -619,7 +625,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 73
+          "execution_count": 48
         }
       ]
     },
@@ -647,12 +653,12 @@
       ],
       "metadata": {
         "id": "lxL827pbEe6Q",
-        "outputId": "bdcab396-0336-4c66-883b-46a70ce60f32",
+        "outputId": "acdb96af-0307-4615-c5d0-1bda171f4fc4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 74,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -662,7 +668,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 74
+          "execution_count": 36
         }
       ]
     },
@@ -707,6 +713,34 @@
         "# WRITE CODE HERE THAT REPRODUCES THE OUTPUT OF THE CELL BELOW\n",
         "# BE CAREFUL NOT TO RUN THE CELL BELOW, OTHERWISE YOU WON'T\n",
         "# BE ABLE TO SEE THE OUTPUT ANY MORE"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.array([mat[0,1],mat[2,0],mat[3,2]]).reshape(3,1)"
+      ],
+      "metadata": {
+        "id": "yPdn6KIxQT5L",
+        "outputId": "bbfaae52-f265-4f24-e8c6-6b1e993cd1f6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 2],\n",
+              "       [ 7],\n",
+              "       [12]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 45
+        }
       ]
     },
     {
@@ -756,6 +790,32 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "np.array(mat[(mat >= 21) & (mat < 26)])"
+      ],
+      "metadata": {
+        "id": "JPeHj9cLR83Y",
+        "outputId": "32c41504-8ae6-4ebc-8e2e-2ab7c3b1f4eb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([21, 22, 23, 24, 25])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 50
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "jupyter": {
@@ -795,6 +855,33 @@
         "# WRITE CODE HERE THAT REPRODUCES THE OUTPUT OF THE CELL BELOW\n",
         "# BE CAREFUL NOT TO RUN THE CELL BELOW, OTHERWISE YOU WON'T\n",
         "# BE ABLE TO SEE THE OUTPUT ANY MORE"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.array(mat[(mat >= 16) & (mat <= 25)]).reshape(2,5)"
+      ],
+      "metadata": {
+        "id": "sH3AX-OZSWgF",
+        "outputId": "f3d7628d-f07a-43fe-90f2-4bd3dbfac335",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[16, 17, 18, 19, 20],\n",
+              "       [21, 22, 23, 24, 25]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 51
+        }
       ]
     },
     {
@@ -844,28 +931,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "x = 0\n",
+        "y = 0\n",
+        "sum = 0\n",
+        "\n",
+        "# Iterate through each row in the matrix; iterate 8 times.\n",
+        "while y < 9:\n",
+        "  # For each row, itertate through each column. In this case, iterates 3 times.\n",
+        "    while x < 3:\n",
+        "        sum += mat[y][x]    # Add to sum the number at mat[row][column]\n",
+        "        x+= 1\n",
+        "    y += 1\n",
+        "    # Increment y(row) and initialize x to zero since, at this point, x=3.\n",
+        "    x = 0\n",
+        "\n",
+        "print(sum)\n"
+      ],
       "metadata": {
-        "jupyter": {
-          "outputs_hidden": false
-        },
-        "id": "vVivJecsas0j",
-        "outputId": "e68b4502-acaa-4226-d55b-5fb598acda1c"
+        "id": "L5zpKMCrS33G",
+        "outputId": "eb586ddb-a121-45f3-f4e2-c5d8671f755c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
+      "execution_count": 68,
       "outputs": [
         {
-          "data": {
-            "text/plain": [
-              "325"
-            ]
-          },
-          "execution_count": 50,
-          "metadata": {},
-          "output_type": "execute_result"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "378\n"
+          ]
         }
-      ],
-      "source": [
-        ""
       ]
     },
     {
@@ -875,6 +973,33 @@
       },
       "source": [
         "#### Get the standard deviation of the values in mat"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# About the standard deviation method: https://numpy.org/doc/stable/reference/generated/numpy.std.html\n",
+        "np.std(mat)"
+      ],
+      "metadata": {
+        "id": "CwWXkn3cXrgr",
+        "outputId": "cbb8b926-743d-4215-e6b4-75f066b0229d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "7.788880963698615"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 66
+        }
       ]
     },
     {
@@ -910,6 +1035,48 @@
       },
       "source": [
         "#### Get the sum of all the columns in mat"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Needs to be fixed.... need to review arrays\n",
+        "x = 0\n",
+        "y = 0\n",
+        "sum = 0\n",
+        "new_mat=[]\n",
+        "np.array(new_mat)\n",
+        "\n",
+        "while x < 3:\n",
+        "    while y < 9:\n",
+        "        sum += mat[y][x]\n",
+        "        y+= 1\n",
+        "    x += 1\n",
+        "    y = 0\n",
+        "    np.append(new_mat,sum)\n",
+        "    sum = 0\n",
+        "\n",
+        "new_mat"
+      ],
+      "metadata": {
+        "id": "nxEtzZ0AYEg5",
+        "outputId": "b3f4dd67-80f1-4cc2-fe2d-0f07a20b5d1e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 78
+        }
       ]
     },
     {
