--- a/Numpy_Exercises.ipynb
+++ b/Numpy_Exercises.ipynb
@@ -721,11 +721,11 @@
         "np.array([mat[0,1],mat[2,0],mat[3,2]]).reshape(3,1)"
       ],
       "metadata": {
-        "id": "yPdn6KIxQT5L",
-        "outputId": "bbfaae52-f265-4f24-e8c6-6b1e993cd1f6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "yPdn6KIxQT5L",
+        "outputId": "bbfaae52-f265-4f24-e8c6-6b1e993cd1f6"
       },
       "execution_count": 45,
       "outputs": [
@@ -794,11 +794,11 @@
         "np.array(mat[(mat >= 21) & (mat < 26)])"
       ],
       "metadata": {
-        "id": "JPeHj9cLR83Y",
-        "outputId": "32c41504-8ae6-4ebc-8e2e-2ab7c3b1f4eb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "JPeHj9cLR83Y",
+        "outputId": "32c41504-8ae6-4ebc-8e2e-2ab7c3b1f4eb"
       },
       "execution_count": 50,
       "outputs": [
@@ -863,11 +863,11 @@
         "np.array(mat[(mat >= 16) & (mat <= 25)]).reshape(2,5)"
       ],
       "metadata": {
-        "id": "sH3AX-OZSWgF",
-        "outputId": "f3d7628d-f07a-43fe-90f2-4bd3dbfac335",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "sH3AX-OZSWgF",
+        "outputId": "f3d7628d-f07a-43fe-90f2-4bd3dbfac335"
       },
       "execution_count": 51,
       "outputs": [
@@ -949,11 +949,11 @@
         "print(sum)\n"
       ],
       "metadata": {
-        "id": "L5zpKMCrS33G",
-        "outputId": "eb586ddb-a121-45f3-f4e2-c5d8671f755c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "L5zpKMCrS33G",
+        "outputId": "eb586ddb-a121-45f3-f4e2-c5d8671f755c"
       },
       "execution_count": 68,
       "outputs": [
@@ -963,6 +963,34 @@
           "text": [
             "378\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Method to get sum of a matrix: https://numpy.org/doc/stable/reference/generated/numpy.sum.html\n",
+        "# Tried my way, then looked for a better method. \n",
+        "np.sum(mat)"
+      ],
+      "metadata": {
+        "id": "qhpZNIvZgi7c",
+        "outputId": "25b80b49-b343-4e9b-bffa-368a15c20174",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 91,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "378"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 91
         }
       ]
     },
@@ -982,11 +1010,11 @@
         "np.std(mat)"
       ],
       "metadata": {
-        "id": "CwWXkn3cXrgr",
-        "outputId": "cbb8b926-743d-4215-e6b4-75f066b0229d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "CwWXkn3cXrgr",
+        "outputId": "cbb8b926-743d-4215-e6b4-75f066b0229d"
       },
       "execution_count": 66,
       "outputs": [
@@ -1040,42 +1068,29 @@
     {
       "cell_type": "code",
       "source": [
-        "# Needs to be fixed.... need to review arrays\n",
-        "x = 0\n",
-        "y = 0\n",
-        "sum = 0\n",
-        "new_mat=[]\n",
-        "np.array(new_mat)\n",
+        "# Function to find the sum of columns of matrix in Python: https://www.delftstack.com/howto/numpy/sum-of-columns-matrix-numpy/\n",
         "\n",
-        "while x < 3:\n",
-        "    while y < 9:\n",
-        "        sum += mat[y][x]\n",
-        "        y+= 1\n",
-        "    x += 1\n",
-        "    y = 0\n",
-        "    np.append(new_mat,sum)\n",
-        "    sum = 0\n",
-        "\n",
-        "new_mat"
+        "s= np.sum(mat,axis=0)\n",
+        "s\n"
       ],
       "metadata": {
-        "id": "nxEtzZ0AYEg5",
-        "outputId": "b3f4dd67-80f1-4cc2-fe2d-0f07a20b5d1e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "nxEtzZ0AYEg5",
+        "outputId": "039b2cfd-41ba-4622-e5a4-82ed55a63b68"
       },
-      "execution_count": 78,
+      "execution_count": 89,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[]"
+              "array([117, 126, 135])"
             ]
           },
           "metadata": {},
-          "execution_count": 78
+          "execution_count": 89
         }
       ]
     },
@@ -1102,7 +1117,7 @@
         }
       ],
       "source": [
-        ""
+        "# not sure if below array is relevant to question."
       ]
     },
     {
