--- a/Numpy_Exercises.ipynb
+++ b/Numpy_Exercises.ipynb
@@ -16,7 +16,9 @@
         "id": "EQGv2D-zas0Q"
       },
       "source": [
-        "# NumPy Problems"
+        "# NumPy Problems\n",
+        "\n",
+        "#### Author: Marcos Ortega"
       ]
     },
     {
@@ -974,11 +976,11 @@
         "np.sum(mat)"
       ],
       "metadata": {
-        "id": "qhpZNIvZgi7c",
-        "outputId": "25b80b49-b343-4e9b-bffa-368a15c20174",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "qhpZNIvZgi7c",
+        "outputId": "25b80b49-b343-4e9b-bffa-368a15c20174"
       },
       "execution_count": 91,
       "outputs": [
@@ -1162,6 +1164,7 @@
     "colab": {
       "name": "Numpy Exercises.ipynb",
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     }
   },
