--- a/Numpy_Exercises.ipynb
+++ b/Numpy_Exercises.ipynb
@@ -41,7 +41,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "metadata": {
         "collapsed": true,
         "jupyter": {
@@ -540,7 +540,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {
         "jupyter": {
           "outputs_hidden": false
@@ -615,7 +615,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -660,7 +660,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -729,7 +729,7 @@
         "id": "yPdn6KIxQT5L",
         "outputId": "bbfaae52-f265-4f24-e8c6-6b1e993cd1f6"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -802,7 +802,7 @@
         "id": "JPeHj9cLR83Y",
         "outputId": "32c41504-8ae6-4ebc-8e2e-2ab7c3b1f4eb"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -871,7 +871,7 @@
         "id": "sH3AX-OZSWgF",
         "outputId": "f3d7628d-f07a-43fe-90f2-4bd3dbfac335"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -934,6 +934,8 @@
     {
       "cell_type": "code",
       "source": [
+        "\"\"\"\n",
+        "First attempt. Then found the method to use via numpy.org.\n",
         "x = 0\n",
         "y = 0\n",
         "sum = 0\n",
@@ -948,7 +950,8 @@
         "    # Increment y(row) and initialize x to zero since, at this point, x=3.\n",
         "    x = 0\n",
         "\n",
-        "print(sum)\n"
+        "print(sum)\n",
+        "\"\"\""
       ],
       "metadata": {
         "colab": {
@@ -957,7 +960,7 @@
         "id": "L5zpKMCrS33G",
         "outputId": "eb586ddb-a121-45f3-f4e2-c5d8671f755c"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -982,7 +985,7 @@
         "id": "qhpZNIvZgi7c",
         "outputId": "25b80b49-b343-4e9b-bffa-368a15c20174"
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1018,7 +1021,7 @@
         "id": "CwWXkn3cXrgr",
         "outputId": "cbb8b926-743d-4215-e6b4-75f066b0229d"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1082,7 +1085,7 @@
         "id": "nxEtzZ0AYEg5",
         "outputId": "039b2cfd-41ba-4622-e5a4-82ed55a63b68"
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1119,7 +1122,7 @@
         }
       ],
       "source": [
-        "# not sure if below array is relevant to question."
+        "# not sure if below array is relevant to question since there are 3 columns."
       ]
     },
     {
