--- a/Numpy_Exercises.ipynb
+++ b/Numpy_Exercises.ipynb
@@ -41,7 +41,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "collapsed": true,
         "jupyter": {
@@ -381,13 +381,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "jupyter": {
           "outputs_hidden": false
         },
         "id": "vhB1R4hlas0e",
-        "outputId": "5d34a57f-ad10-4517-9070-9604bf74cd9b",
+        "outputId": "a1287a45-0f05-4d10-bde5-43cd79a0ddb4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -397,19 +397,19 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[0.14984615, 0.77282095, 0.6681261 , 0.47728377, 0.80073938],\n",
-              "       [0.24169165, 0.44260679, 0.32882428, 0.48311306, 0.15645298],\n",
-              "       [0.18497396, 0.53528031, 0.66471367, 0.08062472, 0.90190618],\n",
-              "       [0.62729013, 0.41377354, 0.90423432, 0.53933059, 0.4134193 ],\n",
-              "       [0.11748269, 0.45437544, 0.6162397 , 0.62951804, 0.62745104]])"
+              "array([-1.03813741,  0.93924924, -0.45032279, -0.92539864, -0.00356565,\n",
+              "        0.15930921,  0.86901802,  1.12679547, -1.64706777, -0.84283797,\n",
+              "        0.40619791,  0.07479907,  0.65369762,  1.18447815, -1.10214762,\n",
+              "       -1.10623237,  1.48427054, -1.03685293, -1.06148437, -1.01017389,\n",
+              "       -0.95317306, -1.3207711 , -0.43225585,  0.23189845,  0.68699126])"
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 14
         }
       ],
       "source": [
-        "np.random.rand(5,5)"
+        "np.random.normal(0,1,25)"
       ]
     },
     {
