--- a/Diabetic_Data_Analysis.ipynb
+++ b/Diabetic_Data_Analysis.ipynb
@@ -4553,7 +4553,7 @@
       "metadata": {
         "id": "77RBnWzQWMwi"
       },
-      "execution_count": null,
+      "execution_count": 48,
       "outputs": []
     },
     {
@@ -4564,7 +4564,7 @@
       "metadata": {
         "id": "7SarOFAvWMsG"
       },
-      "execution_count": null,
+      "execution_count": 49,
       "outputs": []
     },
     {
@@ -4573,10 +4573,23 @@
         "print(confusion_matrix(y_test,pred))"
       ],
       "metadata": {
-        "id": "8AvpYaUmWY4q"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8AvpYaUmWY4q",
+        "outputId": "b6b42066-8929-4976-f415-4d261a0ca969"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[25030  3103]\n",
+            " [ 3138   557]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -4584,10 +4597,30 @@
         "print(classification_report(y_test,pred))"
       ],
       "metadata": {
-        "id": "ZRHOs79WWY1p"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZRHOs79WWY1p",
+        "outputId": "3683eed2-7d12-4926-faa1-4cf7a7e11af2"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.89      0.89      0.89     28133\n",
+            "           1       0.15      0.15      0.15      3695\n",
+            "\n",
+            "    accuracy                           0.80     31828\n",
+            "   macro avg       0.52      0.52      0.52     31828\n",
+            "weighted avg       0.80      0.80      0.80     31828\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -5001,10 +5034,29 @@
         "'''"
       ],
       "metadata": {
-        "id": "sapO_Mk6g2G3"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        },
+        "id": "sapO_Mk6g2G3",
+        "outputId": "b7f084fc-a8d1-4de3-e028-12a81a6ae6c9"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'\\ndot_data = StringIO()\\nexport_graphviz(dtree, out_file=dot_data, feature_names=features, filled=True, rounded=True)\\n\\ngraph = pydot.graph_from_dot_data(dot_data.getvalue())\\nImage(graph[0].create_png())\\n'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 52
+        }
+      ]
     },
     {
       "cell_type": "code",
